Fix autocorrect for cases where the state differs

The testcase in the bug is "Sa 08:00-12:00; 11:30-13:00 off"
but I also added tests (and fixes) for other autocorrect features
which misbehaved when the state was different between the two rules.

BUG: 445787
(cherry picked from commit c1681b453408eec6c6a78d6c1b1030b7d9265ed9)